"feat: implement full filtering with Indonesian support" git push

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,13 @@ NODE_ENV=production
 # Authentication
 ENABLE_AUTH=true
 
+# API Keys - Set your secure API key here
+# Generate one with: node -e "console.log('tmg_' + require('crypto').randomBytes(24).toString('base64url'))"
+API_KEY=tmg_your-secure-api-key-here
+
+# Multiple API keys (comma-separated, optional)
+# API_KEYS=tmg_key1,tmg_key2,tmg_key3
+
 # Rate Limiting
 ENABLE_RATE_LIMIT=true
 RATE_LIMIT_MAX=100
